force-app/main/default/objects/Session_Time__c/Session_Time__c.object-meta.xml
<CustomObject>
    <description>Keep track of every session and the time associated with it.</description>
    <label>Session Time</label>
    <nameField>
        
        <label>Session Time Name</label>
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Session Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>