force-app/main/default/objects/Session_Time__c/fields/Session_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Time__c</fullName>
    <description>Retains each session Time</description>
    <label>Session Time</label>
    <type>Time</type>
</CustomField>