force-app/main/default/objects/Session_Time__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <description>Time of case</description>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>