force-app/main/default/objects/Session_Time__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Automatic</fullName>
                
                
                    <label>Automatic</label>
                
                </value>
            
                <value>
                
                    <fullName>Manual</fullName>
                
                
                    <label>Manual</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>